# ModelDeck

./: .gitignore  Cargo.toml  README.md  repository.yaml
.github/workflows/: build.yml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs  ops.rs
crates/hub/: Cargo.toml  Dioxus.toml  build.rs
crates/hub/assets/: editor.css  styles.css
crates/hub/src/: agent_client.rs  api.rs  db.rs  ha.rs  main.rs  model.rs
crates/hub/src/components/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
db/: schema.surql
deploy/: agent.Dockerfile  agent.amd.compose.yml  agent.nvidia.compose.yml  agent.runtime.Dockerfile
homeassistant/: Dockerfile  config.yaml  runtime.Dockerfile
homeassistant/rootfs/etc/services.d/modeldeck-hub/: run
