[workspace]
resolver = "2"
members = ["crates/shared", "crates/hub", "crates/agent"]

# Shared dependency versions pinned to match OrderTracker's proven toolchain.
[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
modeldeck_shared = { path = "crates/shared" }
