[package]
name = "modeldeck-agent"
edition.workspace = true
version.workspace = true

[[bin]]
name = "modeldeck-agent"
path = "src/main.rs"

[dependencies]
modeldeck_shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
