[package]
name = "model_deck"
edition.workspace = true
version.workspace = true

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
modeldeck_shared = { workspace = true }

# Server-only deps (not WASM-compatible)
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
surrealdb = { version = "3.2.0-beta.2", default-features = false, features = ["protocol-ws", "native-tls"], optional = true }
surrealdb-types = { version = "3.2.0-beta.2", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
dotenvy = { version = "0.15.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
server = [
    "dioxus/server",
    "dep:tokio",
    "dep:reqwest",
    "dep:surrealdb",
    "dep:surrealdb-types",
    "dep:openssl",
    "dep:dotenvy",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:futures-util",
]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }

[build-dependencies]
dotenvy = "0.15.7"
